PR fix: w3-grid layout fixed: questions are on the left side
- only fix to be done on this part now is to have a scrollbar for horizontal scrolling
- added some css for styling

--- a/styles.css
+++ b/styles.css
@@ -133,10 +133,15 @@ table, th, td
   padding-top: 12px;
 }
 
-#allTeamsPitAnswers .allPitTableHeader
+.allPitTableHeader
 {
   background-color:maroon;
   color:gold;
+}
+
+.allPitTableHeader:not(:last-child)
+{
+  border-bottom: 2px solid gold;
 }
 
 .tableBorders
